--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -243,6 +243,7 @@ table {
   margin-left: 25%;
   margin-top: 2%;
   margin-bottom: 7%;
+  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
 }
 
 td,
@@ -259,8 +260,9 @@ td img {
 }
 
 .menu {
-  background-color: #e3bbab;
+  background-color: #BB86FC;
 }
+
 .wrappercode-icons {
   padding-bottom: 70px;
 }
@@ -809,7 +811,7 @@ td img {
 }
 
 .logopic {
-  width: 80%;
+  width: 75%;
   align-content: center;
 }
 
@@ -818,7 +820,7 @@ td img {
   grid-row: 1/2;
   padding-top: 4.5%;
   width: 80%;
-  height: 20%;
+  height: 55px;
   background-color:#BB86FC;
   margin-left: 10%;
 }
@@ -873,7 +875,7 @@ td img {
   padding-top: 4.5%;
   width: 80%;
   height: 60px;
-  background-color: #e3bbab;
+  background-color: #BB86FC;
   margin-left: 10%;
 }
 
@@ -899,7 +901,7 @@ td img {
 .sektion5 {
   margin-top: 30px;
   margin-left: 110px;
-  margin-right: 90px;
+  margin-right: 900px;
 }
 
 h4 {
