--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,6 +14,7 @@ html {
   font-size: 62.5%;
   font-family: Roboto, sans-serif;
   letter-spacing: 1.2px;
+  color: $clr-text;
 }
 
 // Typography
@@ -21,7 +22,7 @@ strong {
   display: block;
 }
 a {
-  color: inherit;
+  color: $clr-text;
   text-decoration: none;
 }
 
@@ -45,16 +46,14 @@ h2 {
   margin-bottom: 2rem;
 }
 h3 {
-  font-weight: 400;
+  font-weight: 300;
   font-size: $font-xl-fallback;
   font-size: $font-xl;
-  margin-bottom: 2rem;
 }
 h4 {
   font-weight: 400;
   font-size: $font-l-fallback;
   font-size: $font-l;
-  margin-bottom: 2rem;
 }
 h5 {
   font-weight: 400;
