--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1613,108 +1613,14 @@ input:checked + .roundbutton:before {
   grid-row: 1/2;
 }
 
-.formProfile {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  margin-top: 60px;
-}
-
-.formProfile section div {
-  text-align: center;
-  margin: 0 auto;
-}
-
-.formProfile section div label {
-  display: block;
-  text-align: center;
-  margin-top: 15px;
-}
-
-.formProfile section div input {
-  width: 75%;
-  border-radius: 15px;
-  border: none;
-  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.4);
-  padding: 7px;
-  font-family: 'Roboto', sans-serif;
-}
-
 .formular-box2 {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 
-.items {
-  grid-column: 1/2;
-  grid-row: 2/3;
-  list-style: none;
-}
-
-.calenderGridContainer {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-}
-.dateM,
-.dateT,
-.dateW,
-.dateTh,
-.dateF,
-.dateS,
-.dateSun {
-  grid-row: 1/2;
-}
-.dateActive {
-  background-color: #e3bbab;
-  padding: 8px;
-  border-radius: 10px;
-  font-weight: 700;
-}
-.timeActive {
-  background-color: #e3bbab;
-  padding: 4px;
-  border-radius: 10px;
-  font-weight: 700;
-}
-.calenderGridContainer div,
-.timesGridContainer div {
-  align-self: center;
-  justify-self: center;
-}
-.timesGridContainer {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 5%;
-}
-.timesPara {
-  margin: 0 !important;
-}
-
 .formular-box3 {
   grid-column: 1/2;
   grid-row: 3/4;
-}
-
-.navItemSearch {
-  grid-column: 1/2;
-  grid-row: 3/4;
-  align-self: flex-start;
-  justify-self: left;
-}
-.searchIcon {
-  margin-top: 50px;
-}
-#searchBar {
-  padding: 6px;
-  border: none;
-  width: 10%;
-  font-size: 17px;
-  display: none;
-  margin-top: 100px;
-  border-radius: 10px;
-  position: absolute;
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
 
 .kodeboks2 {
@@ -1806,4 +1712,29 @@ input:checked + .roundbutton:before {
   grid-column: 2/3;
   grid-row: 3/4;
   padding-bottom: 70px;
+}
+
+/* FORSØG PÅ AT LAVE COLLAPSIBLE BOX - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapsible */
+
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
