--- a/app/scss/_toc.scss
+++ b/app/scss/_toc.scss
@@ -10,12 +10,26 @@
   }
 }
 
+.sideIcons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 100px;
+}
 .whitelogo {
-  height: 60px;
+  height: 70px;
+}
+.whitelogo:hover,
+.whitelogo2:hover {
+  opacity: 0.5;
+  transition: 0.5s;
 }
 .sidemenu {
   height: 40px;
   margin-top: 8px;
+}
+.sidemenu:hover {
+  opacity: 0.5;
+  transition: 0.5s;
 }
 .purpleLine {
   border: 3px solid $clr-light-purple;
@@ -32,12 +46,23 @@
     margin-right: 14%;
     padding: 12px;
     grid-row: 1/2;
+    color: $clr-text;
+    outline: none;
     border: 2px solid $clr-light-purple;
     background-color: $clr-sheet-black;
   }
-  p {
+  input:focus {
+    border: 2px solid #c7a0f8;
+    transition: 0.5;
+  }
+  a {
+    display: block;
     margin-left: 19%;
-    margin-top: 1%;
+    margin-top: 2.5%;
+  }
+  a:hover {
+    color: $clr-light-purple;
+    transition: 0.2s;
   }
   img {
     grid-column: 3/4;
@@ -48,25 +73,12 @@
     height: 20px;
   }
 }
-/* Dropdown Button */
-.dropbtn {
-  font-size: $font-l;
-  font-size: $font-l-fallback;
-  padding: 0;
-  background-color: $clr-grey-black;
-  color: $clr-text;
-  border: none;
-  cursor: pointer;
 
-  hr {
-    border: 2px solid $clr-text;
-    margin-top: 0;
-  }
-}
 .dropdownGrid {
   display: grid;
-  grid-template-columns: 35% 65%;
-  grid-template-rows: repeat(5, 1fr);
+  grid-row-gap: 25px;
+  grid-template-columns: 45% 55%;
+  grid-template-rows: auto;
   padding: 4% 4% 4% 6%;
 
   &__frontIllu {
@@ -76,66 +88,149 @@
     height: auto;
     justify-self: end;
   }
-  &__gridItem1 {
-    grid-column: 1 / 2;
-  }
 }
-
-.dropdown {
-  position: relative;
+#list1 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  text-align: left;
+}
+#list2 {
+  grid-row: 2/3;
+  grid-column: 1/2;
+  text-align: left;
+}
+#list3 {
+  grid-row: 3/4;
+  grid-column: 1/2;
+  text-align: left;
+}
+#list4 {
+  grid-row: 4/5;
+  grid-column: 1/2;
+  text-align: left;
+}
+#list5 {
+  grid-row: 5/6;
+  grid-column: 1/2;
+  text-align: left;
+}
+.dropdown-check-list {
   display: inline-block;
-  float: left;
-  margin-top: 5%;
-
-  &__dropbtn {
-    font-size: $font-l;
-    font-size: $font-l-fallback;
-    padding: 0;
-    background-color: $clr-grey-black;
-    color: $clr-text;
-    border: none;
-    cursor: pointer;
-
-    hr {
-      border: 2px solid $clr-text;
-      margin-top: 0;
-    }
-  }
-
-  &__dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: $clr-grey-black;
-    min-width: 160px;
-    width: 400px;
-    z-index: 1;
-    margin-top: -15px;
-    a {
-      color: $clr-text;
-      padding: 16.5px 18px;
-      margin-left: 20px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-      font-size: $font-med;
-      font-size: $font-med-fallback;
-    }
-    a:hover {
-      background: $clr-sheet-black;
-    }
-
-    img {
-      float: left;
-      height: 250px;
-      margin-top: 20px;
-    }
-  }
 }
-.show {
+.anchor span {
+  border-bottom: 4px solid $clr-text;
+}
+.anchor span:hover {
+  color: $clr-light-purple;
+  border-bottom: 4px solid $clr-light-purple;
+  transition: 0.2s;
+}
+.dropdown-check-list .anchor {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  padding: 5px 50px 5px 10px;
+  transition: 0.5s;
+}
+
+.dropdown-check-list ul.items {
+  padding: 2px;
+  display: none;
+  margin: 3% 0 0 0;
+  border-top: none;
+}
+
+.dropdown-check-list ul.items li {
+  list-style: none;
+  text-align: left;
+  transition: 0.2s;
+  font-size: $font-med;
+}
+
+.dropdown-check-list.visible .items {
   display: block;
 }
-
-.numbermenu {
+.listItems {
+  padding-bottom: 35px;
+}
+.listItems a:hover {
+  color: $clr-light-purple;
+  transition: 0.2s;
+}
+li img {
   float: left;
-  margin: 5% 0 0 1%;
+  height: 250px;
+  margin: 1% 2% 0 10%;
+}
+.sideDropDots {
+  float: left;
+  height: 150px !important;
+  margin: 1% 2% 0 15%;
+}
+.purpleLineSide {
+  border: 3px solid $clr-light-purple;
+  max-width: 65%;
+  margin: 0 auto;
+}
+
+.listItemsSide {
+  padding-bottom: 15px;
+  font-size: $font-sm !important;
+  margin-left: 50px;
+}
+.listItemsSide:hover {
+  color: $clr-light-purple;
+}
+.sideMenuMargin {
+  margin-left: 90px;
+  margin-bottom: 100px;
+}
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.95); /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.4s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.sidenav h5 {
+  text-align: center;
+  margin: 20px 0;
+}
+/* The navigation menu links */
+.whitelogo2 {
+  display: block;
+  margin: 5px auto 20px auto;
+  text-align: center;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: $clr-light-purple;
+  transition: 0.2s;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
