--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -799,30 +799,9 @@ td img {
   grid-row: 1/2;
 }
 
-.kodeboks1 {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  width: 80%;
-  height: 110%;
-  margin-left: 10%;
-  font-family: "MingLiU_HKSCS";
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  padding: 2%;
-}
-
 .logopic {
   width: 75%;
   align-content: center;
-}
-
-.pink1 {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  padding-top: 4.5%;
-  width: 80%;
-  height: 55px;
-  background-color:#BB86FC;
-  margin-left: 10%;
 }
 
 .kode-overskrift {
@@ -1714,18 +1693,25 @@ input:checked + .roundbutton:before {
   padding-bottom: 70px;
 }
 
-/* FORSØG PÅ AT LAVE COLLAPSIBLE BOX - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapsible */
+/*COLLAPSIBLE BOX - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapsible */
 
 .collapsible {
-  background-color: #777;
-  color: white;
+  background-color: #BB86FC;
+  color: #ffff;
   cursor: pointer;
-  padding: 18px;
+  padding: 1px 11px 1px 5px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 20px;
+  
+
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 80%;
+  height: 55px;
+  margin-left: 10%;
 }
 
 .active, .collapsible:hover {
@@ -1736,5 +1722,14 @@ input:checked + .roundbutton:before {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 80%;
+  height: 110%;
+  margin-left: 10%;
+  font-family: "MingLiU_HKSCS";
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
 }
