--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -782,6 +782,51 @@ td img {
   margin-top: 85px;
 }
 
+.wrapper-box-typografi{
+  padding-bottom: 70px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.collapsible-typografi {
+  background-color: #BB86FC;
+  color: #ffff;
+  cursor: pointer;
+  padding: 1px 11px 1px 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  
+
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 80%;
+  height: 55px;
+  margin-left: 10%;
+  margin-top: 10px;
+}
+
+.active, .collapsible-typografi:hover {
+  background-color: #555;
+}
+
+.content-typografi {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 80%;
+  height: 110%;
+  margin-left: 10%;
+  font-family: "MingLiU_HKSCS";
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+}
 
 /*LOGO*/
 .sektion4 {
@@ -920,6 +965,50 @@ h4 {
   vertical-align: middle;
 }
 
+.wrapper-box-button1{
+  padding-bottom: 70px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.collapsible-button1{
+  background-color: #BB86FC;
+  color: #ffff;
+  cursor: pointer;
+  padding: 1px 11px 1px 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  
+
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 80%;
+  height: 55px;
+}
+
+.active, .collapsible-button1:hover {
+  background-color: #555;
+}
+
+.content-button1 {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  
+  grid-column: 2/3;
+  grid-row: 1/2;
+  height: auto;
+  margin-left: 10%;
+  font-family: "MingLiU_HKSCS";
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+}
+
+/*
 .farveboks1 {
   grid-column: 2/3;
   grid-row: 1/2;
@@ -936,6 +1025,7 @@ h4 {
   padding: 2%;
   font-family: "Roboto Mono", monospace;
 }
+*/
 
 .btnCreate {
   color: #1f2d46;
