--- a/app/scss/_preloader.scss
+++ b/app/scss/_preloader.scss
@@ -11,13 +11,14 @@
       opacity: 0;
     }
   }
+
   .splash {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: $clr-solid-pink;
+    background-color: #292929;
     z-index: 200;
     display: flex;
     align-items: center;
@@ -29,13 +30,18 @@
     opacity: 0;
     transition: all 0.75s ease-out;
   }
+
   .fade-in {
     opacity: 0;
-    animation: splashFade 0.75s ease-in forwards;
+    animation: splashFade 1.7s ease-in forwards;
     height: 50%;
     width: 50%;
     background-repeat: no-repeat;
     background-image: url("images/placeholder.png");
-    background-size: 100% 100%;
   }
-  
+
+  .preloaderpic {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
