purpleline fikset, så der kom mindre kode

--- a/app/scss/_error.scss
+++ b/app/scss/_error.scss
@@ -20,6 +20,7 @@
     padding-top: 20px;
     text-align: center;
     padding-top: 4%;
+    margin-bottom: 75px;
     }
 
 .errorboxtext{
@@ -43,12 +44,4 @@
         background-color: $clr-sheet-black;
         color: $clr-text;
       }
-
-.purpleLineerror {
-    border: 3px solid $clr-light-purple;
-    max-width: 89.5%;
-    margin: 0 0 0 6.2%;
-    margin-top: 75px;
-}    
-
     
