--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1043,9 +1043,12 @@ h4 {
   background-color: #555;
 }
 
+.invisible {
+  display: none;
+}
+
 .content-button1 {
   padding: 0 18px;
-  display: none;
   overflow: hidden;
   box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
   
