--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1508,6 +1508,197 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
+/*Meld afbud*/
+.btnsGridItem9 {
+  grid-column: 1/2;
+  grid-row: 9/10;
+}
+
+.btnLoginNr {
+  grid-column: 1/2;
+  grid-row: 9/10;
+}
+
+.emailIcon9 {
+  width: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.wrapper-box-button9{
+  padding-bottom: 70px;
+  grid-column: 2/3;
+  grid-row: 9/10;
+}
+
+.collapsible-button9{
+  background-color: #BB86FC;
+  color: #ffff;
+  cursor: pointer;
+  padding: 1px 11px 1px 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  
+
+  grid-column: 2/3;
+  grid-row: 9/10;
+  background-color: #BB86FC;
+  height: 50px;
+  position: relative;
+}
+
+.active, .collapsible-button9:hover {
+  background-color: #555;
+}
+
+.content-button9 {
+  padding: 0 18px;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  
+  grid-column: 2/3;
+  grid-row: 9/10;
+  height: auto;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Ny bruger*/
+.btnsGridItem10 {
+  grid-column: 1/2;
+  grid-row: 10/11;
+}
+
+.btnLoginNr {
+  grid-column: 1/2;
+  grid-row: 10/11;
+}
+
+.emailIcon10 {
+  width: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.farveboks10 {
+  grid-column: 2/3;
+  grid-row: 10/11;
+  background-color: #BB86FC;
+  height: 50px;
+  position: relative;
+}
+
+.kodeboksen10 {
+  grid-column: 2/3;
+  grid-row: 10/11;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Rediger*/
+.btnsGridItem11 {
+  grid-column: 1/2;
+  grid-row: 11/12;
+}
+
+.btnLoginNr {
+  grid-column: 1/2;
+  grid-row: 11/12;
+}
+
+.emailIcon11 {
+  width: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.farveboks11 {
+  grid-column: 2/3;
+  grid-row: 11/12;
+  background-color: #BB86FC;
+  height: 50px;
+}
+
+.kodeboksen11 {
+  grid-column: 2/3;
+  grid-row: 11/12;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Book igen*/
+.btnsGridItem12 {
+  grid-column: 1/2;
+  grid-row: 12/13;
+}
+
+.btnLoginNr {
+  grid-column: 1/2;
+  grid-row: 12/13;
+}
+
+.emailIcon12 {
+  width: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.farveboks12 {
+  grid-column: 2/3;
+  grid-row: 12/13;
+  background-color: #BB86FC;
+  height: 50px;
+  position: relative;
+}
+
+.kodeboksen12 {
+  grid-column: 2/3;
+  grid-row: 12/13;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Swipe*/
+.btnsGridItem13 {
+  grid-column: 1/2;
+  grid-row: 13/14;
+}
+
+.btnLoginNr {
+  grid-column: 1/2;
+  grid-row: 13/14;
+}
+
+.emailIcon13 {
+  width: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.farveboks13 {
+  grid-column: 2/3;
+  grid-row: 13/14;
+  background-color: #BB86FC;
+  height: 50px;
+  position: relative;
+}
+
+.kodeboksen13 {
+  grid-column: 2/3;
+  grid-row: 13/14;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  padding: 2%;
+  margin-bottom: 50px;
+  font-family: "Roboto Mono", monospace;
+}
+
 .btnsGridItem15,
 .btnsGridItem17,
 .btnsGridItem19,
