--- a/app/scss/_toc.scss
+++ b/app/scss/_toc.scss
@@ -110,6 +110,14 @@
     align-items: center;
   }
 }
+.illus {
+  grid-row: 1/6;
+  grid-column: 2/3;
+  width: 55%;
+  height: auto;
+  justify-self: center;
+  align-items: center;
+}
 #list1 {
   grid-row: 1/2;
   grid-column: 1/2;
