--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -16,13 +16,13 @@ html {
   height: 100%;
   padding-top: 0;
   width: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
   color: #ffff;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* HEADER + NAV */
@@ -49,7 +49,7 @@ header .header-brand {
 }
 
 header .header-brand:hover {
-  color:  #BB86FC;
+  color: #bb86fc;
 }
 header nav {
   margin: auto;
@@ -76,14 +76,14 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  color: #BB86FC;
+  color: #bb86fc;
 }
 
 hr {
   margin-left: 110px;
   margin-bottom: 7px;
-  border-color: #BB86FC;
-  border: 4px solid #BB86FC;
+  border-color: #bb86fc;
+  border: 4px solid #bb86fc;
   width: 1225px;
   margin-top: -10px;
 }
@@ -144,7 +144,7 @@ h3 {
 .infobox1 {
   grid-column: 1/2;
   grid-row: 2/3;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   height: 350px;
   background-color: #2f2f2f;
@@ -154,7 +154,7 @@ h3 {
 .farve2 {
   grid-column: 2/3;
   grid-row: 1/2;
-  background-color: #E3E3E3;
+  background-color: #e3e3e3;
   height: 25%;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
@@ -162,7 +162,7 @@ h3 {
 .infobox2 {
   grid-column: 2/3;
   grid-row: 2/3;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   height: 350px;
   background-color: #2f2f2f;
@@ -172,7 +172,7 @@ h3 {
 .farve3 {
   grid-column: 3/4;
   grid-row: 1/2;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 25%;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
@@ -180,17 +180,17 @@ h3 {
 .infobox3 {
   grid-column: 3/4;
   grid-row: 2/3;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   height: 350px;
-  background-color:#2f2f2f;
+  background-color: #2f2f2f;
   padding: 5%;
 }
 
 .farve4 {
   grid-column: 4/5;
   grid-row: 1/2;
-  background-color: #3700B3;
+  background-color: #3700b3;
   height: 25%;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
@@ -198,7 +198,7 @@ h3 {
 .infobox4 {
   grid-column: 4/5;
   grid-row: 2/3;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   height: 350px;
   background-color: #2f2f2f;
@@ -208,7 +208,7 @@ h3 {
 .farve5 {
   grid-column: 5/6;
   grid-row: 1/2;
-  background-color:  #03DAC5;
+  background-color: #03dac5;
   height: 25%;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
@@ -216,7 +216,7 @@ h3 {
 .infobox5 {
   grid-column: 5/6;
   grid-row: 2/3;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   height: 350px;
   background-color: #2f2f2f;
@@ -243,7 +243,7 @@ table {
   margin-left: 25%;
   margin-top: 2%;
   margin-bottom: 7%;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
 }
 
 td,
@@ -260,7 +260,7 @@ td img {
 }
 
 .menu {
-  background-color: #BB86FC;
+  background-color: #bb86fc;
 }
 
 .wrappercode-icons {
@@ -279,7 +279,7 @@ td img {
   padding-top: 4.5%;
   margin-left: 25%;
   width: 50%;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
 }
 
 /*TYPOGRAFI*/
@@ -291,13 +291,13 @@ td img {
   margin-left: 115px;
   margin-right: 90px;
   margin-top: 30px;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
 }
 
 .farven {
   grid-column: 1/4;
   grid-row: 1/2;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 55px;
 }
 
@@ -766,7 +766,6 @@ td img {
   margin-top: 20px;
 }
 
-
 .typox {
   grid-column: 1/4;
   grid-row: 15/16;
@@ -782,14 +781,14 @@ td img {
   margin-top: 85px;
 }
 
-.wrapper-box-typografi{
+.wrapper-box-typografi {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 1/2;
 }
 
 .collapsible-typografi {
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -798,7 +797,6 @@ td img {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 1/2;
@@ -808,7 +806,8 @@ td img {
   margin-top: 10px;
 }
 
-.active, .collapsible-typografi:hover {
+.active,
+.collapsible-typografi:hover {
   background-color: #555;
 }
 
@@ -816,8 +815,8 @@ td img {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 1/2;
   width: 80%;
@@ -877,15 +876,15 @@ td img {
   grid-row: 1/2;
 }
 
-.wrapper-box-layout{
+.wrapper-box-layout {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 1/2;
   margin-left: 60px;
 }
 
-.collapsible-layout{
-  background-color: #BB86FC;
+.collapsible-layout {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -893,7 +892,6 @@ td img {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 1/2;
@@ -901,7 +899,8 @@ td img {
   height: 55px;
 }
 
-.active, .collapsible-layout:hover {
+.active,
+.collapsible-layout:hover {
   background-color: #555;
 }
 
@@ -909,8 +908,8 @@ td img {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 1/2;
   height: auto;
@@ -933,7 +932,7 @@ td img {
 
 */
 .gridpic {
-  width: auto;
+  width: 80%;
   height: auto;
   align-content: center;
 }
@@ -1014,14 +1013,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button1{
+.wrapper-box-button1 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 1/2;
 }
 
-.collapsible-button1{
-  background-color: #BB86FC;
+.collapsible-button1 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1030,16 +1029,16 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 1/2;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button1:hover {
+.active,
+.collapsible-button1:hover {
   background-color: #555;
 }
 
@@ -1050,8 +1049,8 @@ h4 {
 .content-button1 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 1/2;
   height: auto;
@@ -1069,7 +1068,7 @@ h4 {
   border-radius: 15px;
   font-size: 16px;
   margin: 10px auto;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
 }
 
@@ -1090,15 +1089,14 @@ h4 {
   vertical-align: middle;
 }
 
-
-.wrapper-box-button2{
+.wrapper-box-button2 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 2/3;
 }
 
-.collapsible-button2{
-  background-color: #BB86FC;
+.collapsible-button2 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1107,24 +1105,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 2/3;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button2:hover {
+.active,
+.collapsible-button2:hover {
   background-color: #555;
 }
 
 .content-button2 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 2/3;
   height: auto;
@@ -1133,25 +1131,25 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-  .btnGuest {
-   color: #f1f1e2;
-    font-weight: 500;
+.btnGuest {
+  color: #f1f1e2;
+  font-weight: 500;
 }
 
-  .btnFilter {
-    grid-column: 1 / 4;
-    align-self: center;
-    justify-self: center;
-    display: block;
-    background-color: #BB86FC;
-    font-weight: bold;
-    border: none;
-    width: 150px;
-    height: 50px;
-    border-radius: 15px;
-    font-size: 16px;
-    margin: 35px 0;
-    font-family: 'Roboto', sans-serif;
+.btnFilter {
+  grid-column: 1 / 4;
+  align-self: center;
+  justify-self: center;
+  display: block;
+  background-color: #bb86fc;
+  font-weight: bold;
+  border: none;
+  width: 150px;
+  height: 50px;
+  border-radius: 15px;
+  font-size: 16px;
+  margin: 35px 0;
+  font-family: "Roboto", sans-serif;
 }
 
 /*Ny Bruger*/
@@ -1171,14 +1169,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button3{
+.wrapper-box-button3 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 3/4;
 }
 
-.collapsible-button3{
-  background-color: #BB86FC;
+.collapsible-button3 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1187,24 +1185,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 3/4;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button3:hover {
+.active,
+.collapsible-button3:hover {
   background-color: #555;
 }
 
 .content-button3 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 3/4;
   height: auto;
@@ -1230,14 +1228,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button4{
+.wrapper-box-button4 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 4/5;
 }
 
-.collapsible-button4{
-  background-color: #BB86FC;
+.collapsible-button4 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1246,24 +1244,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 4/5;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button4:hover {
+.active,
+.collapsible-button4:hover {
   background-color: #555;
 }
 
 .content-button4 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 4/5;
   height: auto;
@@ -1289,14 +1287,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button5{
+.wrapper-box-button5 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 5/6;
 }
 
-.collapsible-button5{
-  background-color: #BB86FC;
+.collapsible-button5 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1305,24 +1303,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 5/6;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button5:hover {
+.active,
+.collapsible-button5:hover {
   background-color: #555;
 }
 
 .content-button5 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 5/6;
   height: auto;
@@ -1348,14 +1346,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button6{
+.wrapper-box-button6 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 6/7;
 }
 
-.collapsible-button6{
-  background-color: #BB86FC;
+.collapsible-button6 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1364,24 +1362,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 6/7;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button6:hover {
+.active,
+.collapsible-button6:hover {
   background-color: #555;
 }
 
 .content-button6 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 6/7;
   height: auto;
@@ -1389,7 +1387,6 @@ h4 {
   padding: 2%;
   font-family: "Roboto Mono", monospace;
 }
-
 
 /*Book*/
 .btnsGridItem7 {
@@ -1408,14 +1405,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button7{
+.wrapper-box-button7 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 7/8;
 }
 
-.collapsible-button7{
-  background-color: #BB86FC;
+.collapsible-button7 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1424,24 +1421,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 7/8;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button7:hover {
+.active,
+.collapsible-button7:hover {
   background-color: #555;
 }
 
 .content-button7 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 7/8;
   height: auto;
@@ -1466,14 +1463,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button8{
+.wrapper-box-button8 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 8/9;
 }
 
-.collapsible-button8{
-  background-color: #BB86FC;
+.collapsible-button8 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1482,24 +1479,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 8/9;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button8:hover {
+.active,
+.collapsible-button8:hover {
   background-color: #555;
 }
 
 .content-button8 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 8/9;
   height: auto;
@@ -1525,14 +1522,14 @@ h4 {
   vertical-align: middle;
 }
 
-.wrapper-box-button9{
+.wrapper-box-button9 {
   padding-bottom: 70px;
   grid-column: 2/3;
   grid-row: 9/10;
 }
 
-.collapsible-button9{
-  background-color: #BB86FC;
+.collapsible-button9 {
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -1541,24 +1538,24 @@ h4 {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 9/10;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
 
-.active, .collapsible-button9:hover {
+.active,
+.collapsible-button9:hover {
   background-color: #555;
 }
 
 .content-button9 {
   padding: 0 18px;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 9/10;
   height: auto;
@@ -1587,7 +1584,7 @@ h4 {
 .farveboks10 {
   grid-column: 2/3;
   grid-row: 10/11;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
@@ -1620,7 +1617,7 @@ h4 {
 .farveboks11 {
   grid-column: 2/3;
   grid-row: 11/12;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
 }
 
@@ -1652,7 +1649,7 @@ h4 {
 .farveboks12 {
   grid-column: 2/3;
   grid-row: 12/13;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
@@ -1685,7 +1682,7 @@ h4 {
 .farveboks13 {
   grid-column: 2/3;
   grid-row: 13/14;
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   height: 50px;
   position: relative;
 }
@@ -1733,7 +1730,7 @@ h4 {
   height: 50px;
   border-radius: 15px;
   font-size: 14px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #1f2d46;
 }
 
@@ -1749,7 +1746,7 @@ h4 {
   border-radius: 15px;
   font-size: 16px;
   margin: 10px auto;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #1f2d46;
   align-self: center;
   justify-self: center;
@@ -1766,7 +1763,7 @@ h4 {
   border-radius: 15px;
   font-size: 10px;
   margin: 25px 0 0 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #1f2d46;
 }
 
@@ -1784,14 +1781,14 @@ h4 {
   border-radius: 15px;
   font-size: 10px;
   margin: 25px 0 0 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #1f2d46;
 }
 
 .headerProfile {
   color: #1f2d46;
   margin: 5% 0 5% 5%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
 }
 
@@ -1824,7 +1821,7 @@ h4 {
   border: none;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.4);
   padding: 7px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .profileContainer {
@@ -1848,7 +1845,7 @@ h4 {
 
 .sliderText p {
   margin-bottom: 8px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 
@@ -1905,7 +1902,6 @@ input:checked + .roundbutton {
 input:checked + .roundbutton:before {
   transform: translate(1.2rem, 0);
 }
-
 
 /*FORMULAR*/
 
@@ -2027,7 +2023,7 @@ input:checked + .roundbutton:before {
 /*COLLAPSIBLE BOX - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapsible */
 
 .collapsible {
-  background-color: #BB86FC;
+  background-color: #bb86fc;
   color: #ffff;
   cursor: pointer;
   padding: 1px 11px 1px 5px;
@@ -2036,7 +2032,6 @@ input:checked + .roundbutton:before {
   text-align: left;
   outline: none;
   font-size: 20px;
-  
 
   grid-column: 2/3;
   grid-row: 1/2;
@@ -2045,7 +2040,8 @@ input:checked + .roundbutton:before {
   margin-left: 10%;
 }
 
-.active, .collapsible:hover {
+.active,
+.collapsible:hover {
   background-color: #555;
 }
 
@@ -2053,8 +2049,8 @@ input:checked + .roundbutton:before {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  box-shadow: 0px 5px 10px -4px rgba(0,0,0,0.8);
-  
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 1/2;
   width: 80%;
