--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1130,6 +1130,7 @@ h4 {
   background-image: #232323;
   border-radius: 5px;
   font-size: 18px;
+  color: #fff;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   padding: 25px;
 }
@@ -1144,7 +1145,7 @@ h4 {
   z-index: 99;
   border-radius: 2px;
   background-color: #232323;
-  width: 80%;
+  width: 100%;
 }
 
 .results ul {
